2006-08-02  Armin Burgmeier  <armin@arbur.net>

	* gtk/src/fontbutton.hg: Renamed constructor argument to font_name
	for gmmproc to produce the correct property name.


2006-08-02  Marko Anastasov  <marko@marko.anastasov.name>

	* examples/book/printing/advanced/previewdialog.cc:
	* examples/book/printing/advanced/previewdialog.h:
	* examples/book/printing/advanced/printformoperation.cc:
	* examples/book/printing/advanced/printformoperation.h:
	Further efforts to fix #347857. See comment #14.
	* gtk/src/pagesetup.hg:
	Removed some commented conversions for PaperSize which haven't been
	used ever since convert_gtk.m4 contains the necessary.
	* gtk/src/printoperationpreview.hg:
	Fixed the conversion for PrintContext which takes a reference and fixes
	some of the problems in the bug. Uncommented ready and got_page_size
	signals.
	* tools/m4/convert_gtk.m4:
	Made both conversions for PaperSize (C to Cpp) take a reference.
	Removed two unnecessary conversions for PrintContext.

2006-08-01  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/figures/Makefile.am:
	* docs/tutorial/figures/recentchooserdialog.png:
	* docs/tutorial/gtkmm-tut.xml: added a screenshot of the RecentChooserDialog
	and a bit of additional explanation to the example

2006-08-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/recentchooser.ccg:
	* gtk/src/recentchooser.hg:
	* gtk/src/recentinfo.ccg:
	* gtk/src/recentinfo.hg:
	* gtk/src/recentmanager.ccg:
	* gtk/src/recentmanager.hg: Move RecentInfoTraits into recentinfo.hg, and 
	use it for RecentManager::get_items() as well as the existing 
	RecentChooser::get_items().

2006-07-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/recentchooser.ccg:
	* gtk/src/recentchooser.hg:
	* gtk/src/recentinfo.hg:
	* gtk/src/recentmanager.hg: Use RecentInfo via RefPtr always.
	* tools/m4/convert_gtk.m4:

2006-07-27  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Linked to the wiki page.
