@@ -1,3 +1,12 @@
+2006-08-02  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/printing/advanced/previewdialog.cc:
+	* examples/book/printing/advanced/previewdialog.h: Rename the signal 
+	handlers so it is is bit clearer. Use show_all_children() instead of 
+	show_all() so that the caller can decided when to show the window.
+	* examples/book/printing/advanced/printformoperation.cc: Use show(), 
+	and set the dialog pointer to 0 after deleting it.
+
 2006-08-02  Armin Burgmeier  <armin@arbur.net>
 
 	* gtk/src/fontbutton.hg: Renamed constructor argument to font_name
